syntax = "proto3";
package admin_account;
option go_package = "admin/proto/admin_account;admin_account";
import "proto/admin_menu/admin_menu.proto";

// 登录
message LoginReq{
  string username = 1; // 用户名
  string password = 2; // 密码
}

message LoginResp{
  int32 adminId = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  string email = 5;
  string createTime = 6;
  string modifyTime = 7;
  string lastLoginTime = 8;
  string lastLoginIp = 9;
  int32 loginTotal = 10;
  bool enabled = 11;
  string token = 12;
  int32 expire = 13;
  repeated admin_menu.menuItem menus = 14;
  map<string, string> permissions = 15;
}

//账号详情
message AccountDetailReq{
  bool refreshToken=1;//刷新token
}

message AccountDetailResp{}

// 账号编辑
message AccountEditReq{
  string nickname=1;//名称
  string avatar=2;//头像
  string email=4;//邮箱
}

message AccountEditResp{}

// 修改密码
message AccountPasswordEditReq{
  string oldPassword=1;//旧密码
  string password=2;//新密码
  string confirmPassword=3;//确认密码
}

message AccountPasswordEditResp{}

// 个人权限
message AccountPermissionReq{
  int32 menuId=1;//菜单ID
}

message AccountPermissionResp{}

